--- a/style.css
+++ b/style.css
@@ -1,7 +1,36 @@
-div{
+*{
+    margin: 0;
+    padding: 0;
+}
+.blog{
+    height: 200px;
+    width: 500px;
     font-size: 25px;
-    background-color: orange;
-    padding: 10px;
-    margin-bottom: 10px;
+    background-color: aquamarine;
+    border: 10px solid tomato;
+    padding: 20px;
+    margin: 20px;
+    text-align: justify;
+    box-shadow: 5px 5px 5px;
+    
 
+}
+.blog h3{
+    text-align: center;
+}
+.blog h3:hover{
+    color: orangered;
+    left: 55%;
+
+}
+.blog p{
+    margin-top: 15px;
+}
+div ol{
+    margin-left: 100px;
+    margin-top: 15px;
+}
+h3{
+    font-size: 40px;
+    text-decoration: overline;
 }
